# search

./: Dockerfile  README.md  app.py  pyproject.toml  utils.py
demo/: app.py  utils.py
demo-search/: Chart.yaml  values.yaml
demo-search/templates/: _helpers.tpl  deployment.yaml
infrastructure/: ingress.yaml  search_demo_pvc.yaml
infrastructure/search/: values.yaml
infrastructure/search/templates/: _helpers.tpl  deployment.yaml
